--- a/src/Composit/finalCard/finalCard.css
+++ b/src/Composit/finalCard/finalCard.css
@@ -2,6 +2,7 @@
 .final-card-medium{
 padding: 30px 30px;
 max-width: 270px;
+max-height: 300px;
 cursor: pointer;}
 .back-medium{
     height: 260px;
