--- a/src/Composit/imageContainer/Image.css
+++ b/src/Composit/imageContainer/Image.css
@@ -12,6 +12,10 @@
 }
  .image-icons{
     background-color: transparent;
+    transition: .5s ease;
+}
+.image-icons:hover{
+    filter: contrast(120%);
 }
 .image-icons:hover > .image-social  {
     transform: rotate(0deg);
